Update-from-weekend

--- a/ProjectsDS/Week1/day2/theory/Python_I_Precurse.ipynb
+++ b/ProjectsDS/Week1/day2/theory/Python_I_Precurse.ipynb
@@ -50,60 +50,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "2\n"
+    }
+   ],
+   "source": [
+    "x = 2\n",
+    "\n",
+    "print(x)\n",
+    "\n",
+    "gabriel_vazquez = \"Gabriel Vazquez\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": "Hello Python world!\nNombre de compañero\n"
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "'Rochi'"
-     },
-     "metadata": {},
-     "execution_count": 28
     }
    ],
    "source": [
     "print(\"Hello Python world!\")\n",
     "print(\"Nombre de compañero\")\n",
     "\n",
-    "compañero = \"Compañero\"\n",
-    "rosario_marianeschi = \"Rochi\"\n",
-    "rosario_marianeschi"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Asi es como se dejan notas, comentarios que Python no toma como comando."
+    "compañero = \"Compañero123123\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "(2, 4, 5)\n"
+     "text": "Compañero123123\n"
     }
    ],
    "source": [
-    "x = 2,4,5\n",
-    "print(x)"
+    "print(compañero)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "<class 'str'>\n"
+    }
+   ],
    "source": [
     "# String, Integer, Float, List, None (NaN)\n",
     "# str, int, float, list, \n",
@@ -111,15 +118,35 @@
     "string_ = \"23\"\n",
     "numero = 23\n",
     "\n",
-    "#print(type(string_))\n",
-    "print(type(numero))"
+    "print(type(string_))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "23\n"
+    }
+   ],
+   "source": [
+    "print(string_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "33\n"
+    }
+   ],
    "source": [
     "numero2 = 10\n",
     "suma = numero + numero2\n",
@@ -128,9 +155,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "2333\n"
+    }
+   ],
    "source": [
     "string2 = \"33\"\n",
     "suma2 = string_ + string2\n",
@@ -139,9 +172,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "43\n"
+    }
+   ],
+   "source": [
+    "m = (((numero2 + int(string2))))\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "<class 'int'>\n"
+    }
+   ],
+   "source": [
+    "print(type(int(string2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "<class 'str'>\n"
+    }
+   ],
+   "source": [
+    "y = 22\n",
+    "y = str(y)\n",
+    "print(type(y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "<class 'int'>\n"
+    }
+   ],
+   "source": [
+    "string2 = int(string2)\n",
+    "print(type(string2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "10\n10\n<class 'int'>\n<class 'str'>\n"
+    }
+   ],
    "source": [
     "string3 = \"10\"\n",
     "numero_a_partir_de_string = int(string3)\n",
@@ -154,7 +257,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "2"
+     },
+     "metadata": {},
+     "execution_count": 44
+    }
+   ],
+   "source": [
+    "h = \"2\"\n",
+    "int(h)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -184,24 +306,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "2"
+     },
+     "metadata": {},
+     "execution_count": 51
+    }
+   ],
+   "source": [
+    "x = int(5.6//2)\n",
+    "\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "12\n"
+     "text": "1\n"
     }
    ],
    "source": [
     "# Soy un comentario\n",
     "# print(\"Hello Python world!\")\n",
-    "# estoy creando una variable que vale 2\n",
+    "# Estoy creando una variable que vale 2\n",
     "\"\"\"\n",
     "Esto es otro comentario\n",
     "\"\"\"\n",
     "print(x)\n",
-    "x = 12\n"
+    "x = 25\n",
+    "x = 76\n",
+    "x = \"1\""
    ]
   },
   {
@@ -231,79 +375,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "70\n"
-    }
-   ],
-   "source": [
-    "edad = 41\n",
-    "edad_compañero_der = 29\n",
-    "suma_anterior = edad + edad_compañero_der\n",
-    "print(suma_anterior)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "int"
+      "text/plain": "47"
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 66
     }
    ],
    "source": [
-    "type(suma_anterior)"
+    "edad = 18\n",
+    "edad_companero_der = 29\n",
+    "suma_anterior = edad + edad_companero_der\n",
+    "suma_anterior"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "70.0"
-     },
-     "metadata": {},
-     "execution_count": 16
-    }
-   ],
-   "source": [
-    "float(suma_anterior)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "'70'"
-     },
-     "metadata": {},
-     "execution_count": 17
-    }
-   ],
-   "source": [
-    "str(suma_anterior)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -321,40 +414,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "'Ada Lovelace'"
-     },
-     "metadata": {},
-     "execution_count": 20
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "<built-in method upper of str object at 0x0000021CD21027F0>\n"
     }
    ],
    "source": [
-    "name"
+    "print(name.upper)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "ADA LOVELACE\n"
+    }
+   ],
+   "source": [
+    "print(name.upper())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "x = 2\n",
+    "x = x + 1\n",
+    "x += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "2 4 Pepito Hola\n"
+    }
+   ],
+   "source": [
+    "x = 2\n",
+    "y = 4\n",
+    "\n",
+    "print(x, y, \"Pepito\", \"Hola\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 2. Números y operadores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "- Tipo de x:\n<class 'int'>\n- Valor de x:\n3\n- x+1:\n4\n- x-1:\n2\n- x*2:\n6\n- x^2:\n9\n- x modificado:\n4\n- x modificado:\n8\n- Varias cosas en una línea:\n1 2 8 10\n"
+     "text": "- Tipo de x:\n<class 'int'>\n- Valor de x:\n3\n- x+1:\n4\n- x-1:\n2\n- x*2:\n6\n- x^2:\n9\n- x modificado:\n4\n- x modificado:\n8\n- Varias cosas en una línea:\n1||||2||||8||||10\n"
     }
    ],
    "source": [
@@ -384,20 +516,14 @@
     "print(x)  # Imprime \"8\"\n",
     "\n",
     "print(\"- Varias cosas en una línea:\")\n",
-    "print(1,2,x,5*2) # imprime varias cosas a la vez"
+    "print(1, 2, x, 5*2, sep=\"||||\") # imprime varias cosas a la vez"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "- Tipo de y:\n<class 'float'>\n- Varios valores en punto flotante:\n2.5 3.5 6.25 6.25\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y = 2.5 \n",
     "print(\"- Tipo de y:\")\n",
@@ -703,7 +829,7 @@
     "name": "ipython",
     "version": 3
    },
-   "version": "3.7.6-final"
+   "version": "3.6.4-final"
   },
   "orig_nbformat": 2,
   "file_extension": ".py",
