--- a/ProjectsDS/Week1/day3/exercises/Exercises.ipynb
+++ b/ProjectsDS/Week1/day3/exercises/Exercises.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lista_alumnos = [\"Valeria\", \"Natalio\", \"Gabriel\", \"Rosario\", \"Roxana\", \"Elsa\", \"Cristina\", \"Monica\", \"Alba\", \"JoseLuis\", \"Jalex\", \"Clara\", \"Filipa\", \"Tomas\", \"JoseMaria\", \"David\"]\n"
+    "lista_alumnos = [\"Gabriel\", \"Natalio\"]"
    ]
   },
   {
@@ -58,11 +58,7 @@
    "outputs": [],
    "source": [
     "mesa1 = [\"Gabriel\", \"Valeria\"]\n",
-    "mesa2 = [\"Rosario\", \"Natalio\"]\n",
-    "mesa3 = [\"Monica\", \"Alba\", \"Cristina\"]\n",
-    "mesa4 = [\"Elsa\", \"Roxana\", \"JoseMaria\"]\n",
-    "mesa5 = [\"Filipa\", \"Tomas\", \"JoseLuis\"]\n",
-    "mesa6 = [\"Clara\", \"David\", \"Jalex\"]"
+    "mesa2 = [\"Natalio\", \"Rosario\"]"
    ]
   },
   {
@@ -109,6 +105,13 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
