--- a/ProjectsDS/Week2/day4/theory/Python_VII_Precurse.ipynb
+++ b/ProjectsDS/Week2/day4/theory/Python_VII_Precurse.ipynb
@@ -4044,6 +4044,105 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def f(acum):\n",
+    "    if acum == 10:\n",
+    "        return acum\n",
+    "    print(\"acum:\", acum)\n",
+    "    p = f(acum=acum+1)\n",
+    "    return p\n",
+    "    \n",
+    "x = f(acum=0)\n",
+    "print(x)\n",
+    "print(\"Ha terminado esto\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 15. List and Dict comprehension"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### List comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h_letters = []\n",
+    "\n",
+    "for letter in 'human':\n",
+    "    h_letters.append(letter)\n",
+    "\n",
+    "print(h_letters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h_letters = [letter for letter in 'human']\n",
+    "print( h_letters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Expression\n",
+    "[expression for item in list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "\n"
+    }
+   ],
+   "source": [
+    "number_list = [ x for x in range(20) if x % 2 == 0 and x == 0]\n",
+    "print(number_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj = [\"Even\" if i%2==0 else \"Odd\" for i in range(10)]\n",
+    "print(obj)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dict comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
