--- a/ProjectsDS/Week1/day4/theory/Python_III_Precurse.ipynb
+++ b/ProjectsDS/Week1/day4/theory/Python_III_Precurse.ipynb
@@ -359,6 +359,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Markdown\n",
+    "\n",
+    "### Título 3\n",
+    "\n",
+    "\n",
+    "1. Uno\n",
+    "2. Dos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 65,
    "metadata": {},
@@ -384,12 +397,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "One of Python's strengths is its diverse community.\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "\"One of Python's strengths is its diverse community.\""
+     },
+     "metadata": {},
+     "execution_count": 1
+    }
+   ],
    "source": [
     "message2 = \"One of Python's strengths is its diverse community.\" \n",
-    "print(message2)"
+    "print(message2)\n",
+    "message2"
    ]
   },
   {
@@ -448,19 +476,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'name' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-ba1a3f9c81fd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupper\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'name' is not defined"
-     ]
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "<built-in method upper of str object at 0x0000021CD21027F0>\n"
     }
    ],
    "source": [
@@ -1401,7 +1423,7 @@
    ],
    "source": [
     "x = None\n",
-    "y = []\n",
+    "y = \"\"\n",
     "z = 0\n",
     "m = False\n",
     "\n",
@@ -1414,17 +1436,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[]\n"
+     "text": "n\n"
     }
    ],
    "source": [
-    "x = []\n",
+    "s = \"Benancio\"\n",
+    "print(s[4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "False\n"
+    }
+   ],
+   "source": [
+    "x = \"\"\n",
     "\n",
     "if x:\n",
     "    print(True)\n",
@@ -1515,10 +1553,192 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Gabriel\n"
+    }
+   ],
+   "source": [
+    "x = input(\"Escribe tu nombre:\")\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "6\n"
+    }
+   ],
+   "source": [
+    "primero = int(input(\"Inserta un número:\"))\n",
+    "segundo = int(input(\"Inserta otro número:\"))\n",
+    "\n",
+    "print(primero + segundo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = \"2\"\n",
+    "\n",
+    "x.lower()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "12\n"
+    }
+   ],
+   "source": [
+    "p = input(\"Número 1:\")\n",
+    "k = input(\"Número 2:\")\n",
+    "\n",
+    "if p.isnumeric() and k.isnumeric():\n",
+    "    j = int(p) + int(k)\n",
+    "    print(j)\n",
+    "else:\n",
+    "    print(\"Solo están permitidos números.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = \"X\"\n",
+    "y = 4\n",
+    "\n",
+    "print(x > y)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 5. Iteraciones, For"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "6\n8\n10\n12\n9518591859\n"
+    },
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "'>' not supported between instances of 'str' and 'int'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-26-639db40e95d3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlista2\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[1;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[1;32melif\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: '>' not supported between instances of 'str' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "lista = [\"red\", 2, \"blue\", 4.0]\n",
+    "lista2 = [2, 4, 6, 8, 10, 12, 9518591859]\n",
+    "\n",
+    "for x in lista2:\n",
+    "    if x > 6:\n",
+    "        print(x)\n",
+    "    elif x == 6:\n",
+    "        print(x)\n",
+    "    elif x == 4:\n",
+    "        lista2.append(x)\n",
+    "\n",
+    "lista2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "X\n"
+    }
+   ],
+   "source": [
+    "lista = [\"Red\", \"GabriXel\", \"Blue\", 2]\n",
+    "\n",
+    "for gato in lista:\n",
+    "    if gato == \"GabriXel\":\n",
+    "        print(gato[5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "X\n"
+    }
+   ],
+   "source": [
+    "# Sacar del elemento 2 la posición 5.\n",
+    "# Es String\n",
+    "lista = [\"Red\", \"GabriXel\", \"Blue\", 2]\n",
+    "\n",
+    "for gato in lista:\n",
+    "    if gato == lista[1]:\n",
+    "        print(gato[5])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "1\nX\n2\n3\n4\n"
+    }
+   ],
+   "source": [
+    "# Mostrar la iteración del for\n",
+    "# Es String\n",
+    "lista = [\"Red\", \"GabriXel\", \"Blue\", 2]\n",
+    "\n",
+    "count = 1\n",
+    "for gato in lista:\n",
+    "    if count == 2:\n",
+    "        print(gato[5])\n",
+    "    print(count)\n",
+    "    count += 1"
    ]
   },
   {
@@ -1573,49 +1793,272 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "AttributeError",
-     "evalue": "'int' object has no attribute 'lower'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-b0dc1c69e76a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'lower'"
-     ]
-    }
-   ],
    "source": [
-    "x = 2\n",
-    "x.lower()\n"
+    "## 9. Funciones con return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "True\n"
+     "text": "6\n"
     }
    ],
    "source": [
-    "s1 = \"Valid\"\n",
-    "check_s1 = s1.isalpha()\n",
-    "print(check_s1)\n"
+    "def nombre_funcion():\n",
+    "    a = 2\n",
+    "    b = 4\n",
+    "    suma = a + b\n",
+    "    print(suma)\n",
+    "\n",
+    "nombre_funcion()\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'suma3' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-46-ee62a9beca84>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0msuma3\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msuma3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'suma3' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "## 9. Funciones con return"
+    "a = 3\n",
+    "\n",
+    "def nombre_funcion():\n",
+    "    a = 2\n",
+    "    b = 4\n",
+    "    suma3 = a + b\n",
+    "    \n",
+    "print(suma3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "6\n"
+    }
+   ],
+   "source": [
+    "def nombre_funcion():\n",
+    "    a = 2\n",
+    "    b = 4\n",
+    "    suma3 = a + b\n",
+    "    return suma3\n",
+    "    \n",
+    "print(nombre_funcion())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "None\n"
+    }
+   ],
+   "source": [
+    "def nombre_funcion():\n",
+    "    a = 2\n",
+    "    b = 4\n",
+    "    suma3 = a + b\n",
+    "    \n",
+    "print(nombre_funcion())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"HOLA\"\n",
+    "s.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "6\n-2\n-2\n"
+    }
+   ],
+   "source": [
+    "def nombre_funcion():\n",
+    "    a = 2\n",
+    "    b = 4\n",
+    "    suma3 = a + b\n",
+    "    resta = a - b\n",
+    "    print(suma3)\n",
+    "    print(resta)\n",
+    "    return resta\n",
+    "    print(suma3)\n",
+    "    return [\"2\", 2]\n",
+    "    \n",
+    "x = nombre_funcion()\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0.8333333333333334\n"
+    }
+   ],
+   "source": [
+    "def suma():\n",
+    "    a = 2\n",
+    "    b = 3\n",
+    "    return a + b\n",
+    "\n",
+    "def multiplicacion():\n",
+    "    a = 2\n",
+    "    b = 3\n",
+    "    return a * b\n",
+    "\n",
+    "def f():\n",
+    "    x = suma()\n",
+    "    y = multiplicacion()\n",
+    "    h = x / y\n",
+    "    return h\n",
+    "\n",
+    "x = f()\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "'int' object is not callable",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-57-4f022eb667b2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0msuma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msuma\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "suma = 2 \n",
+    "x = suma()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'a1' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-65-09e047513ffa>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m7\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msuma_generica\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marg1\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0ma1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0marg2\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'a1' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def suma_generica(arg1, arg2):\n",
+    "    \"\"\" Suma arg1 y arg2 \"\"\"\n",
+    "    return arg1 + arg2\n",
+    "\n",
+    "a = 3\n",
+    "b = 7\n",
+    "\n",
+    "x = suma_generica(arg1=a, arg2=b)\n",
+    "print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Solo se pueden sumar números\nNone\n"
+    }
+   ],
+   "source": [
+    "def suma_generica(arg1, arg2):\n",
+    "    \"\"\" Suma arg1 y arg2 \"\"\"\n",
+    "    if arg1.isnumeric() and arg2.isnumeric():\n",
+    "        return int(arg1) + int(arg2)\n",
+    "    else:\n",
+    "        print(\"Solo se pueden sumar números\")\n",
+    "\n",
+    "a = input()\n",
+    "b = input()\n",
+    "\n",
+    "x = suma_generica(arg1=a, arg2=b)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Solo se pueden sumar números\n"
+    }
+   ],
+   "source": [
+    "def suma_generica(arg1, arg2):\n",
+    "    \"\"\" Suma arg1 y arg2 \"\"\"\n",
+    "    if arg1.isnumeric() and arg2.isnumeric():\n",
+    "        return int(arg1) + int(arg2)\n",
+    "    else:\n",
+    "        return \"Solo se pueden sumar números\"\n",
+    "\n",
+    "a = input()\n",
+    "b = input()\n",
+    "\n",
+    "x = suma_generica(arg1=a, arg2=b)\n",
+    "print(x)"
    ]
   },
   {
@@ -1633,7 +2076,7 @@
     "name": "ipython",
     "version": 3
    },
-   "version": "3.7.6-final"
+   "version": "3.6.4-final"
   },
   "orig_nbformat": 2,
   "file_extension": ".py",
