--- a/ProjectsDS/Week2/day1/theory/Python_IV_Precurse.ipynb
+++ b/ProjectsDS/Week2/day1/theory/Python_IV_Precurse.ipynb
@@ -2813,25 +2813,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9. Bucle While\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 10. Break, Continue"
+    "## 9. Break, Continue"
    ]
   },
   {
@@ -2871,6 +2856,22 @@
     "    if k == \"gabriel\":\n",
     "        continue\n",
     "    print(k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bonus: \n",
+    "\n",
+    "list[[:x]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10. While"
    ]
   },
   {
