--- a/ProjectsDS/Week2/day4/theory/content.ipynb
+++ b/ProjectsDS/Week2/day4/theory/content.ipynb
@@ -42,10 +42,12 @@
     "    - Funciones dentro de Funciones\n",
     "    - Funciones recursivas\n",
     "    - Return\n",
+    "    - Valores por defecto\n",
+    "    - *args, **kwargs\n",
+    "    - Lambda\n",
     "6. Input \n",
     "7. Importar módulos (librería, paquete)\n",
-    "8. Dict/List comprehension\n",
-    "9. Lambda \n",
+    "8. Dict/List comprehension \n",
     "10. Map/Filter & Reduce (functools)\n",
     "11. Ficheros\n",
     "12. Try / Except"
