UPDATE de Miercoles1deJulio

--- a/ProjectsDS/Week1/day3/exercises/Exercises.ipynb
+++ b/ProjectsDS/Week1/day3/exercises/Exercises.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lista_alumnos = [\"Gabriel\", \"Natalio\"]"
+    "lista_alumnos = [\"Valeria\", \"Natalio\", \"Gabriel\", \"Rosario\", \"Roxana\", \"Elsa\", \"Cristina\", \"Monica\", \"Alba\", \"JoseLuis\", \"Jalex\", \"Clara\", \"Filipa\", \"Tomas\", \"JoseMaria\", \"David\"]\n"
    ]
   },
   {
@@ -58,7 +58,11 @@
    "outputs": [],
    "source": [
     "mesa1 = [\"Gabriel\", \"Valeria\"]\n",
-    "mesa2 = [\"Natalio\", \"Rosario\"]"
+    "mesa2 = [\"Rosario\", \"Natalio\"]\n",
+    "mesa3 = [\"Monica\", \"Alba\", \"Cristina\"]\n",
+    "mesa4 = [\"Elsa\", \"Roxana\", \"JoseMaria\"]\n",
+    "mesa5 = [\"Filipa\", \"Tomas\", \"JoseLuis\"]\n",
+    "mesa6 = [\"Clara\", \"David\", \"Jalex\"]"
    ]
   },
   {
@@ -105,13 +109,6 @@
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
