--- a/ProjectsDS/Week1/day4/theory/2_Instrucciones condicionales y bucles.ipynb
+++ b/ProjectsDS/Week1/day4/theory/2_Instrucciones condicionales y bucles.ipynb
@@ -389,9 +389,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "=== Probando función muestra_todos con una lista ===\nTomate\nCebolla\nPimiento\nPepino\nAjo\nAceite\nVinagre\n"
+    }
+   ],
    "source": [
     "def muestra_todos(contenedor):\n",
     "    for elemento in contenedor:\n",
@@ -521,9 +529,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[0, 1, 2, 3, 4]"
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
    "source": [
     "list(range(5))"
    ]
@@ -537,27 +554,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[5, 6, 7, 8, 9]"
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
    "source": [
     "list(range(5, 10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[5, 7, 9]"
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
    "source": [
     "list(range(5, 10, 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[10, 9, 8, 7, 6]"
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
    "source": [
     "list(range(10, 5, -1))"
    ]
@@ -571,9 +615,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "=== Probando la función suma_naturales_hasta ===\nIntroduce un número entero:\nLa suma hasta 3 es None\n"
+    }
+   ],
    "source": [
     "# Implementa la siguiente función\n",
     "def suma_naturales_hasta(n):\n",
@@ -710,9 +762,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "=== Prueba de la función suma_primeros ===\n¿Cuántos elementos quieres sumar?\nSuma: 30\n"
+    }
+   ],
    "source": [
     "# Suma los primeros n elementos de una secuencia\n",
     "def suma_primeros(secuencia, n):\n",
@@ -752,6 +812,45 @@
     "y observa lo que ocurre.\n",
     "\n",
     "Prueba también a pasarle a `suma_primeros` una secuencia generada con `range`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "=== Prueba de la función suma_primeros ===\n¿Cuántos elementos quieres sumar?\nSuma: suma_primeros(numeros, n)\n"
+    }
+   ],
+   "source": [
+    "numeros = [\"Tomate\", \"Cebolla\", \"Pimiento\", \"Ajo\", \"Aceite\", \"Vinagre\"]\n",
+    "def suma_primeros(secuencia, n):\n",
+    "    '''\n",
+    "    Devuelve la suma de los primeros n elementos de una secuencia. \n",
+    "    Si n es mayor que el número de elementos de la secuencia, se calcula\n",
+    "    la suma de la secuencia completa.\n",
+    "    '''\n",
+    "    # Este if se podría sustituir por:   n = max(n, len(secuencia))\n",
+    "    if n > len(secuencia):\n",
+    "        n = len(secuencia)\n",
+    "    \n",
+    "    suma = 0\n",
+    "    for i, elemento in enumerate(secuencia):\n",
+    "        if i < n:\n",
+    "            suma += str(elemento)\n",
+    "            \n",
+    "    return suma\n",
+    "\n",
+    "print(\"=== Prueba de la función suma_primeros ===\")\n",
+    "numeros = [\"Tomate\", \"Cebolla\", \"Pimiento\", \"Ajo\", \"Aceite\", \"Vinagre\"]\n",
+    "print(\"¿Cuántos elementos quieres sumar?\")\n",
+    "n = int(input())\n",
+    "print(\"Suma:\", \"suma_primeros(numeros, n)\")"
    ]
   },
   {
@@ -841,7 +940,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
