--- a/ProjectsDS/Week3/day1/PracticePython.ipynb
+++ b/ProjectsDS/Week3/day1/PracticePython.ipynb
@@ -145,6 +145,97 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Exercise 2 (and Solution)\n",
+    "Ask the user for a number. Depending on whether the number is even or odd, print out an appropriate message to the user. \n",
+    "\n",
+    "#Hint: how does an even / odd number react differently when divided by 2?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Good job! You chose an even number\n"
+    }
+   ],
+   "source": [
+    "number = int(input(\"Enter a number: \"))\n",
+    "\n",
+    "def pares(choice):\n",
+    "    if number %2 == 0:\n",
+    "        print(\"Good job! You chose an even number\")\n",
+    "    else:\n",
+    "        print(\"Buuu. That's odd\")\n",
+    "pares(choice=number)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Exercise 7 (and Solution)\n",
+    "Let’s say I give you a list saved in a variable: a = [1, 4, 9, 16, 25, 36, 49, 64, 81, 100]. Write one line of Python that takes this list a and makes a new list that has only the even elements of this list in it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1, 4, 9, 16, 25, 36, 49, 64, 81, 100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-37-eba6930f75ce>, line 1)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-37-eba6930f75ce>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print(n for n in a:[lambda a: a%2])\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(n for n in a:[lambda a: a%2]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[4, 16, 36, 64, 100]\n"
+    }
+   ],
+   "source": [
+    "a = [1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n",
+    "\n",
+    "b = [elem for elem in a if elem % 2 == 0] \n",
+    "print(b)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
