--- a/ProjectsDS/Week3/day2/theory/Python_X_Precurse.ipynb
+++ b/ProjectsDS/Week3/day2/theory/Python_X_Precurse.ipynb
@@ -5084,7 +5084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -5093,7 +5093,7 @@
       "text/plain": "[-5, -4, -3, -2, -1, 0, 1, 2, 3, 4]"
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 51
     }
    ],
    "source": [
@@ -5103,7 +5103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -5112,7 +5112,7 @@
       "text/plain": "[-5, -4, -3, -2, -1]"
      },
      "metadata": {},
-     "execution_count": 30
+     "execution_count": 52
     }
    ],
    "source": [
@@ -5147,13 +5147,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 53,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "<filter object at 0x00000243DBDB2828>\n"
+     "text": "<filter object at 0x111d05bd0>\n"
     }
    ],
    "source": [
@@ -5167,7 +5169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -5176,7 +5178,7 @@
       "text/plain": "[-5, -4, -3, -2, -1]"
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 54
     }
    ],
    "source": [
@@ -5186,8 +5188,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 56,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
@@ -5200,12 +5204,12 @@
       "text/plain": "[-5, -4, -3, -2, -1]"
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 56
     }
    ],
    "source": [
     "lista = list(range(-5, 5))\n",
-    "print(l)\n",
+    "print(lista)\n",
     "def check_is_lower_0_filter_v2(x):\n",
     "    return x < 0\n",
     "\n",
@@ -5215,7 +5219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -5224,7 +5228,7 @@
       "text/plain": "[-5, -4, -3, -2, -1]"
      },
      "metadata": {},
-     "execution_count": 34
+     "execution_count": 57
     }
    ],
    "source": [
@@ -5244,8 +5248,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
+   "execution_count": 58,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
@@ -5370,20 +5376,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-32-f12a1691d931>, line 9)",
+     "ename": "NameError",
+     "evalue": "name 'def__init__' is not defined",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-32-f12a1691d931>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    def__init__(self):\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-49-f20acc192ef3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mHumano\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mnombre\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0medad\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mnumero_ojos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-49-f20acc192ef3>\u001b[0m in \u001b[0;36mHumano\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mDNI\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mdef__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnombre\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnombre\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'def__init__' is not defined"
      ]
     }
    ],
    "source": [
-    "class Humano:\n",
+    "class Humano():\n",
     "\n",
     "    nombre = None\n",
     "    edad = None\n",
@@ -5392,6 +5402,7 @@
     "    DNI = None\n",
     "\n",
     "    def__init__(self):\n",
+    "    self.nombre = nombre\n",
     "    pass\n",
     "\n",
     "chiquito = Humano()\n",
